--- a/templates/index.html
+++ b/templates/index.html
@@ -181,8 +181,8 @@
       const downloadBtn = document.getElementById("download-btn");
       const loadingOverlay = document.getElementById("loading-overlay");
 
-      const repoOwner = "DulangaDasanayake";
-      const repoName = "iqair-data-scraper";
+      const repoOwner = "fectscr";
+      const repoName = "aqi-scraper";
       const branchName = "main";
 
       async function fetchFiles(folderPath) {
